--- a/templates/login/signin.html
+++ b/templates/login/signin.html
@@ -14,7 +14,7 @@
 
 <img class="gif-background" src="{% static 'Image1.png' %}" alt="GIF" class="gif">
 <img class="gif-background2" src="{% static 'Bem-Vindo PPT.png' %}" alt="GIF" class="gif">
-<img class="gif-background3" src="{% static 'Welcome3.png' %}" alt="GIF" class="gif">
+<img class="gif-background3" src="{% static 'Welcome PPT.png' %}" alt="GIF" class="gif">
 <div class="container mt-5">
   <div class="row justify-content-center">
     <div class="col-md-6">
