--- a/static/signin.css
+++ b/static/signin.css
@@ -40,39 +40,47 @@ background-color: #0056b3; /* Custom color for the primary button */
 
 /* Position the first image on the left side */
 .gif-background {
-  height: 55vh;
-  width: 520px;
+  height: 60vh;
+  width: 570px;
   margin-left: 60px;
   position: fixed; /* Or 'absolute' if you want it to scroll with the page */
   left: 0; /* Align to the left side */
-  top: 70%; /* Center vertically */
+  top: 67%; /* Center vertically */
   transform: translateY(-50%); /* Adjust to center the image vertically */
    /* Ensure it overlaps the background */
+
 
 }
 
 /* Position the second image on the right side */
 .gif-background2 {
-  height: 20vh;
-  width: 600px;
-  margin-right: 30px;
+  height: 10vh;
+  width: 480px;
+  margin-right: 60px;
   position: fixed; /* Or 'absolute' if you want it to scroll with the page */
   right: 0; /* Align to the right side */
-  top: 75%; /* Center vertically */
+  top: 65%; /* Center vertically */
   transform: translateY(-50%); /* Adjust to center the image vertically */
+  box-shadow: inset 0 0 15px 0px red;
+  background-color: #dad5b6;
+  border-radius: 15px;
+  animation: rotateY 12s ease-in-out alternate-reverse infinite;
   
   /* Ensure it overlaps the background */
 }
 
 .gif-background3 {
-  height: 20vh;
-  width: 600px;
-  margin-right: 30px;
+  height: 10vh;
+  width: 480px;
+  margin-right: 60px;
   position: fixed; /* Or 'absolute' if you want it to scroll with the page */
   right: 0; /* Align to the right side */
-  top: 45%; /* Center vertically */
+  top: 50%; /* Center vertically */
   transform: translateY(-50%); /* Adjust to center the image vertically */
-  
+  box-shadow: inset 0 0 15px 0px rgb(32, 219, 72);
+  background-color: #dad5b6;
+  border-radius: 15px;
+  animation: rotateY 12s ease-in-out reverse infinite;
   /* Ensure it overlaps the background */
 }
 
