--- a/templates/mainsite/quiz_1.html
+++ b/templates/mainsite/quiz_1.html
@@ -188,7 +188,7 @@ input[type="radio"]:checked + img {
           <div class="progress-bar progress-bar-striped" style="width:70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
         </div>
         {% if not repeated_question %}
-          <b>{{question_id}} of 11</b>
+          <div class="numbering"><b>{{question_id}} of 11</b></div>
         {% else %}
           <b>Repeated Question</b>
         {% endif %} 
