--- a/templates/mainsite/test_dashboard.html
+++ b/templates/mainsite/test_dashboard.html
@@ -296,9 +296,9 @@
                 response.quizzes.forEach(function(quiz) {
                     var quizItem = `<li class="list-group-item d-flex justify-content-between align-items-center">
                         <div>
-                            Quiz ${quiz.number}: <strong>${quiz.questions_answered} out of ${quiz.total_questions} questions answered</strong>
+                            <b>Quiz ${quiz.number}</b>: <strong>${quiz.questions_answered}</strong> out of <strong>${quiz.total_questions}</strong> questions answered
                             <div class="progress" style="height: 20px; margin-top: 10px; width: 80%;">
-                                <div class="progress-bar" role="progressbar" style="width: ${quiz.progress_percent}%;" aria-valuenow="${quiz.progress_percent}" aria-valuemin="0" aria-valuemax="100">${quiz.progress_percent}%</div>
+                                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: ${quiz.progress_percent}%;" aria-valuenow="${quiz.progress_percent}" aria-valuemin="0" aria-valuemax="100"><div style="margin-left: 10px">${quiz.progress_percent}%</div></div>
                             </div>
                         </div>
                         <a href="/quiz/${unitId}/${quiz.number}" class="btn btn-primary">Access Quiz</a>
